# yfiles-jupyter-graphs-for-neo4j

./: .gitignore  LICENSE.md  README.md  README_DEV.md  environment.build.yml  environment.dev.yml  package.json  pyproject.toml
.github/workflows/: build-package.yml  publish.yml
example/: basic_example.ipynb  configurations_example.ipynb  selection_example.ipynb
examples/: Grouping.ipynb  basic_example.ipynb  configurations_example.ipynb  feature_example.ipynb  grouping.ipynb  selection_example.ipynb
src/yfiles_jupyter_graphs_for_neo4j/: Yfiles_Neo4j_Graphs.py  __init__.py
